[gd_scene load_steps=8 format=3 uid="uid://ru6r704auwky"]

[ext_resource type="Script" path="res://scripts/lobby_menu.gd" id="1_3g2el"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k2py4"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7cryh"]
bg_color = Color(0.615686, 0.0509804, 0.0705882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_utrpq"]
bg_color = Color(0.764706, 0.0784314, 0.101961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y6w4r"]
bg_color = Color(0.905882, 0.117647, 0.137255, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3bqir"]
bg_color = Color(0.788235, 0.239216, 0.239216, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_367bd"]
bg_color = Color(0.152941, 0.152941, 0.152941, 1)

[node name="Lobby Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3g2el")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1307.0
offset_bottom = 85.0
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 216.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2

[node name="List title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Lobby Name"
vertical_alignment = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_k2py4")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Return" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -986.0
offset_bottom = -639.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_7cryh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_utrpq")
theme_override_styles/normal = SubResource("StyleBoxFlat_y6w4r")
text = "return"

[node name="New_lobby" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.802308
anchor_top = 0.291429
anchor_right = 1.0
anchor_bottom = 0.378571
offset_left = -6.10352e-05
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_7cryh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_utrpq")
theme_override_styles/normal = SubResource("StyleBoxFlat_y6w4r")
text = "create a lobby"
metadata/_edit_use_anchors_ = true

[node name="Lobby_name" type="LineEdit" parent="."]
visible = false
layout_mode = 0
offset_left = 602.0
offset_top = 204.0
offset_right = 986.0
offset_bottom = 265.0
theme_override_font_sizes/font_size = 30
placeholder_text = "enter a lobby name"
alignment = 1
max_length = 20

[node name="Refresh" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 197.0
offset_top = 201.0
offset_right = -789.0
offset_bottom = -438.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_7cryh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_utrpq")
theme_override_styles/normal = SubResource("StyleBoxFlat_y6w4r")
text = "refresh list"

[node name="Lobby_template" type="Control" parent="."]
visible = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
anchors_preset = 0
offset_top = 265.0
offset_right = 1300.0
offset_bottom = 315.0
size_flags_vertical = 0

[node name="Name" type="Label" parent="Lobby_template"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_3bqir")
text = "Lobby name"
vertical_alignment = 2

[node name="Join" type="Button" parent="Lobby_template"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -399.0
offset_top = -25.0
offset_right = -22.0
offset_bottom = 25.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_367bd")
text = "JOIN"

[node name="Adjective1OptionButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 509.0
offset_top = 202.0
offset_right = 686.0
offset_bottom = 262.0
item_count = 6
popup/item_0/text = "Bolted"
popup/item_1/text = "Shiny"
popup/item_1/id = 1
popup/item_2/text = "Oiled"
popup/item_2/id = 2
popup/item_3/text = "Wired"
popup/item_3/id = 3
popup/item_4/text = "Geared"
popup/item_4/id = 4
popup/item_5/text = "Fixed"
popup/item_5/id = 5

[node name="Adjective2OptionButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 687.0
offset_top = 202.0
offset_right = 864.0
offset_bottom = 262.0
item_count = 6
popup/item_0/text = "Chrome"
popup/item_1/text = "Broken"
popup/item_1/id = 1
popup/item_2/text = "Metal"
popup/item_2/id = 2
popup/item_3/text = "Steel"
popup/item_3/id = 3
popup/item_4/text = "Iron"
popup/item_4/id = 4
popup/item_5/text = "Brass"
popup/item_5/id = 5

[node name="NounOptionButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 865.0
offset_top = 202.0
offset_right = 1042.0
offset_bottom = 262.0
item_count = 10
popup/item_0/text = "Bot"
popup/item_1/text = "Droid"
popup/item_1/id = 1
popup/item_2/text = "Unit"
popup/item_2/id = 2
popup/item_3/text = "Gear"
popup/item_3/id = 3
popup/item_4/text = "Cog"
popup/item_4/id = 4
popup/item_5/text = "Bolt"
popup/item_5/id = 5
popup/item_6/text = "Circuit"
popup/item_6/id = 6
popup/item_7/text = "Servo"
popup/item_7/id = 7
popup/item_8/text = "Pipe"
popup/item_8/id = 8
popup/item_9/text = "Valve"
popup/item_9/id = 9

[connection signal="pressed" from="Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="New_lobby" to="." method="_on_new_lobby_pressed"]
[connection signal="text_submitted" from="Lobby_name" to="." method="_on_lobby_name_text_submitted"]
[connection signal="pressed" from="Refresh" to="." method="_on_refresh_pressed"]
